feat: :rocket: Update personal information

--- a/index.html
+++ b/index.html
@@ -3,26 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Francesco Guasti personal website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio!</h1>
+        <h1>Welcome to my website, forza Roma!</h1>
     </header>
     <main>
         <section>
             <h2>About Me</h2>
-            <p>Hello! I'm a web developer passionate about creating amazing websites. Here's some of my work:</p>
-            <ul>
-                <li><a href="#">Project 1</a></li>
-                <li><a href="#">Project 2</a></li>
-                <li><a href="#">Project 3</a></li>
-            </ul>
+            <p>Hello! Born on January 24, 1993, Francesco Guasti is a qualified physiotherapist and osteopath. He graduated in Fisioterapia e Osteopatia and started his professional journey in 2015. Francesco has been practicing in Prato, where he applies his knowledge and skills to provide personalized care for his patients.</p>
         </section>
     </main>
     <footer>
-        <p>Contact me: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+        <p>Contact me: <a href="mailto:fguasti@gmail.com">fguasti@gmail.com</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
