--- a/index.html
+++ b/index.html
@@ -3,22 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Francesco Guasti personal website</title>
-    <link rel="stylesheet" href="style.css">
+    <title>My Fun GitHub Page</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background: linear-gradient(45deg, #ff9a9e, #fad0c4);
+            overflow: hidden;
+        }
+        h1 {
+            font-size: 3em;
+            margin-top: 20vh;
+            animation: bounce 1.5s infinite;
+        }
+        @keyframes bounce {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
+        }
+        .floating {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background: rgba(255, 255, 255, 0.5);
+            border-radius: 50%;
+            animation: floatUp 5s linear infinite;
+        }
+        @keyframes floatUp {
+            from { transform: translateY(100vh); opacity: 1; }
+            to { transform: translateY(-10vh); opacity: 0; }
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to my website, forza Roma!</h1>
-    </header>
-    <main>
-        <section>
-            <h2>About Me</h2>
-            <p>Hello! Born on January 24, 1993, Francesco Guasti is a qualified physiotherapist and osteopath. He graduated in Fisioterapia e Osteopatia and started his professional journey in 2015. Francesco has been practicing in Prato, where he applies his knowledge and skills to provide personalized care for his patients.</p>
-        </section>
-    </main>
-    <footer>
-        <p>Contact me: <a href="mailto:fguasti@gmail.com">fguasti@gmail.com</a></p>
-    </footer>
-    <script src="script.js"></script>
+    <h1>Welcome to My Fun GitHub Page! 🎉</h1>
+    <script>
+        function createFloatingElements() {
+            for (let i = 0; i < 20; i++) {
+                let bubble = document.createElement("div");
+                bubble.classList.add("floating");
+                document.body.appendChild(bubble);
+                bubble.style.left = Math.random() * 100 + "vw";
+                bubble.style.animationDuration = (Math.random() * 5 + 3) + "s";
+                bubble.style.width = bubble.style.height = (Math.random() * 30 + 20) + "px";
+                setTimeout(() => bubble.remove(), 8000);
+            }
+        }
+        setInterval(createFloatingElements, 1000);
+    </script>
 </body>
 </html>
