--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Fun GitHub Page</title>
+    <title>Piacere, Francesco!</title>
     <style>
         body {
             margin: 0;
@@ -15,7 +15,7 @@
         }
         h1 {
             font-size: 3em;
-            margin-top: 20vh;
+            margin-top: 10vh;
             animation: bounce 1.5s infinite;
         }
         @keyframes bounce {
@@ -34,10 +34,30 @@
             from { transform: translateY(100vh); opacity: 1; }
             to { transform: translateY(-10vh); opacity: 0; }
         }
+        .section {
+            background: rgba(255, 255, 255, 0.8);
+            margin: 20px auto;
+            padding: 20px;
+            border-radius: 10px;
+            width: 80%;
+            max-width: 800px;
+        }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Fun GitHub Page! 🎉</h1>
+    <h1>Welcome to website! 🏥</h1>
+    <div class="section">
+        <h2>About Me</h2>
+        <p>Hello! Born on January 24, 1993, Francesco Guasti is a qualified physiotherapist and osteopath. He graduated in Fisioterapia e Osteopatia and started his professional journey in 2015. Francesco has been practicing in Prato, where he applies his knowledge and skills to provide personalized care for his patients.</p>
+    </div>
+    <div class="section">
+        <h2>Services</h2>
+        <p>I offer various physiotherapy treatments, including rehabilitation, sports therapy, and pain management.</p>
+    </div>
+    <div class="section">
+        <h2>Contact</h2>
+        <p>Email: fguasti@gmail.com</p>
+    </div>
     <script>
         function createFloatingElements() {
             for (let i = 0; i < 20; i++) {
