--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
             padding: 0;
             font-family: Arial, sans-serif;
             text-align: center;
-            background: linear-gradient(45deg, #ff9a9e, #fad0c4);
+            background: linear-gradient(45deg, #6a11cb, #2575fc);
             overflow: hidden;
+            color: white;
         }
         h1 {
             font-size: 3em;
-            margin-top: 10vh;
+            margin-top: 5vh;
             animation: bounce 1.5s infinite;
         }
         @keyframes bounce {
@@ -35,17 +36,25 @@
             to { transform: translateY(-10vh); opacity: 0; }
         }
         .section {
-            background: rgba(255, 255, 255, 0.8);
+            background: rgba(255, 255, 255, 0.2);
             margin: 20px auto;
             padding: 20px;
             border-radius: 10px;
             width: 80%;
             max-width: 800px;
         }
+        .profile-photo {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-    <h1>Welcome to website! 🏥</h1>
+    <img src="./src/img/profile-picture.png" alt="Francesco Guasti" class="profile-photo">
+    <h1>Welcome to my website! 🏥</h1>
     <div class="section">
         <h2>About Me</h2>
         <p>Hello! Born on January 24, 1993, Francesco Guasti is a qualified physiotherapist and osteopath. He graduated in Fisioterapia e Osteopatia and started his professional journey in 2015. Francesco has been practicing in Prato, where he applies his knowledge and skills to provide personalized care for his patients.</p>
@@ -56,7 +65,11 @@
     </div>
     <div class="section">
         <h2>Contact</h2>
-        <p>Email: fguasti@gmail.com</p>
+        <p>Email: <a href="mailto:fguasti@gmail.com">fguasti@gmail.com</a></p>
+    </div>
+    <div class="section">
+        <h2>Book an Appointment</h2>
+        <iframe src="https://calendly.com/your-calendly-link" width="100%" height="600" frameborder="0"></iframe>
     </div>
     <script>
         function createFloatingElements() {
