--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
         <a href="#appointment"><img src="./src/img/appointment-icon.png" alt="Appointment"> Appointment</a>
     </div>
     
-    
+    <img src="src/img/profile-picture.png" alt="Francesco Guasti" class="profile-photo">
     <h1>Welcome to my website! 🏥</h1>
-    <img src=./src/img/profile-picture.png" alt="Francesco Guasti" class="profile-photo">
     <div class="section" id="about">
         <h2>About Me</h2>
         <p>Hello! Born on January 24, 1993, Francesco Guasti is a qualified physiotherapist and osteopath. He graduated in Fisioterapia e Osteopatia and started his professional journey in 2015. Francesco has been practicing in Prato, where he applies his knowledge and skills to provide personalized care for his patients.</p>
