--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
         h1 {
             font-size: 2.5em;
-            margin-top: 10vh;
+            margin-top: 12vh;
             animation: bounce 1.5s infinite;
         }
         @keyframes bounce {
@@ -33,11 +33,12 @@
             display: flex;
             justify-content: center;
             padding: 10px 0;
+            flex-wrap: wrap;
         }
         .menu a {
             color: white;
             text-decoration: none;
-            margin: 0 15px;
+            margin: 5px 15px;
             display: flex;
             align-items: center;
         }
@@ -48,18 +49,41 @@
         }
         .section {
             background: rgba(255, 255, 255, 0.2);
-            margin: 10px auto;
-            padding: 15px;
+            margin: 15px auto;
+            padding: 20px;
             border-radius: 10px;
             width: 90%;
             max-width: 700px;
         }
         .profile-photo {
-            width: 100px;
-            height: 100px;
+            width: 20vw;
+            max-width: 120px;
+            height: auto;
             border-radius: 50%;
             object-fit: cover;
             margin-top: 20px;
+        }
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2em;
+                margin-top: 15vh;
+            }
+            .menu {
+                flex-direction: column;
+                align-items: center;
+                padding: 10px;
+            }
+            .menu a {
+                margin: 5px 0;
+            }
+            .section {
+                width: 95%;
+                padding: 15px;
+            }
+            .profile-photo {
+                width: 30vw;
+                max-width: 100px;
+            }
         }
     </style>
 </head>
